--- a/franske-course-information/modules/itc-2000/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2000/pages/assignments.adoc
@@ -15,7 +15,7 @@ TIP: If you have not done lab reports in one of Dr. Franske's classes before, or
 
 === Printer Labs
 
-=== Linux Labs
+=== Virtualization/Linux Labs
 
 === Windows Installation Labs
 
@@ -43,21 +43,29 @@ Any participation activities completed in the course will go here. This falls in
 * Complete the online course feedback form (5 points for completing)
 * Complete the Practice Final Exam (Chapters 1-9) (10 points for attempting)
 * Complete the Practice Final Exam (Chapters 10-14) (10 points for attempting)
-* Compete the A+ 220-1001 Certification Practice Exam (10 points for attempting)
-* Compete the A+ 220-1002 Certification Practice Exam (10 points for attempting)
+* Compete the A+ 220-1101 Certification Practice Exam (10 points for attempting)
+* Compete the A+ 220-1102 Certification Practice Exam (10 points for attempting)
 * Weekly Progress Self-Evaluation - Complete on the Netacad Website (10 points possible each week)
 * Computer History Summary Report (15 points)
 ** Write a 400-500 word summary of the information you learned in the video and why you think it may be useful to know about that history in your IT career. Submit your report through the Netacad site.
 
 == Unit Assessments
-You are responsible for completing all of the online unit assessments listed below. Multiple modules are included in single exams. These exams fall into the online assessments category of your course grade. 
+You are responsible for completing all of the online module assessments listed below. These exams fall into the online assessments category of your course grade. 
 
-* Modules 1 - 3: Basic Network Connectivity and Communications Exam
-* Modules 4 - 7: Ethernet Concepts Exam
-* Modules 8 - 10: Communicating Between Networks Exam
-* Modules 11 - 13: IP Addressing Exam
-* Modules 14 - 15: Network Application Communications Exam
-* Modules 16 - 17: Building and Securing a Small Network Exam
+* Module 1 Exam - Introduction to Personal Computer Hardware
+* Module 2 Exam - PC Assembly
+* Module 3 Exam - Advanced Computer Hardware
+* Module 4 Exam - Preventive Maintenance and Troubleshooting
+* Module 5 Exam - Networking Concepts
+* Module 6 Exam - Applied Networking
+* Module 7 Exam - Laptops and Other Mobile Devices
+* Module 8 Exam - Printers
+* Module 9 Exam - Virtualization and Cloud Computing
+* Module 10 Exam - Windows Installation
+* Module 11 Exam - Windows Configuration
+* Module 12 Exam - Mobile, Linux, and macOS Operating Systems
+* Module 13 Exam - Security
+* Module 14 Exam - The IT Professional
 
 == Skills Final Exam
 The Skills Final Exam is designed to test your ability to apply the concepts learned in this class and practiced in labs to common, real-world scenarios. There are two parts to this portion of your grade.
